--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "codegen": "graphql-codegen --config codegen.ts --watch"
   },
   "dependencies": {
+    "@parcel/watcher": "^2.5.0",
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query-devtools": "^5.64.1",
     "add": "^2.0.6",
     "concurrently": "^9.1.2",
     "graphql": "^16.10.0",
