--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"yarn run codegen\" next dev",
+    "dev": "concurrently \"yarn run codegen\" \"yarn next dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-query-devtools": "^5.64.1",
     "add": "^2.0.6",
+    "axios": "^1.8.3",
     "concurrently": "^9.1.2",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
