--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "next": "^15.1.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "yarn": "^1.22.22"
