--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "concurrently": "^9.1.2",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
-    "next": "^15.1.3",
+    "nanoid": "^3.3.8",
+    "next": "^15.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.1",
