--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "add": "^2.0.6",
     "axios": "^1.8.3",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "nanoid": "^3.3.8",
